2004-10-04 Scott Dattalo <scott@dattalo.com>
	* README, INSTALL: Cleaned up stale documentation.
	
2004-10-04 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: Send an extra CR to the parser when loading a
	command file. Turns out that when the gui loads a file, the
	parser doesn't process it until another CR is seen.
	
2004-10-04 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc, gui/gui_regwin.cc, gui/gui_breadboard.cc:
	Removed some debugging printfs.
	* gui/gui_object.cc:
	With GTK+ 2.2.1 under linux, the gtk_widget_show() was losing
	the (x,y) position of the window.
	
2004-10-04 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc, gui/gui_breadboard.h:
	The breadboard expose events invalidated drawing areas which in
	turn recursively generated expose events. I'm not sure why this
	code worked with GTK+ 1.x

2004-10-04 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc, gui/gui.h, gui/gui_stopwatch.cc,
	gui/gui_object.cc, gui/gui_main.cc, gui/gui_object.h,
	gui/gui_profile.cc, gui/gui_regwin.cc, gui/gui_scope.cc,
	gui/gui_src.h, gui/gui_src_asm.cc, gui/gui_src_opcode.cc,
	gui/gui_stack.cc, gui/gui_stopwatch.cc, gui/gui_symbols.cc,
	gui/gui_trace.cc, gui/gui_watch.cc:
	Work in progress - trying to resolve breadboard start up
	issues with GTK+ 2.X .

2004-10-03 Borut Razem <borut.razem@siol.net>
	* config_win32.h.in, plat/win32/configure_win32.awk,
	  cli/cli.vcproj, src/src.vcproj,
	  plat/win32/make.mingw, makefile.mingw, cli/makefile.mingw, gpsim/makefile.mingw,
	  gui/makefile.mingw, modules/makefile.mingw, src/makefile.mingw:
	  added configure_win32.awk script, which takes version number from
	  configure.in and inserts them into config_win32.h.in and generates cofig.h
	* plat/win32/gpsim.def: MSVC sync

2004-10-01 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/processor.h, gui/gui.h, gui/gui_regwin.c
	gui/gui_asm.cc, gui/gui_src_opcode.c, plat/win32/make.mingw:
	Stabilizing windows port. Apparently under windows there's a